; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-integrator-ap.c_clkevt_set_next_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-integrator-ap.c_clkevt_set_next_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@clkevt_base = common dso_local global i64 0, align 8
@TIMER_CTRL = common dso_local global i64 0, align 8
@TIMER_CTRL_ENABLE = common dso_local global i64 0, align 8
@TIMER_LOAD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @clkevt_set_next_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clkevt_set_next_event(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %6 = load i64, i64* @clkevt_base, align 8
  %7 = load i64, i64* @TIMER_CTRL, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i64 @readl(i64 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @TIMER_CTRL_ENABLE, align 8
  %12 = xor i64 %11, -1
  %13 = and i64 %10, %12
  %14 = load i64, i64* @clkevt_base, align 8
  %15 = load i64, i64* @TIMER_CTRL, align 8
  %16 = add nsw i64 %14, %15
  %17 = call i32 @writel(i64 %13, i64 %16)
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @clkevt_base, align 8
  %20 = load i64, i64* @TIMER_LOAD, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @writel(i64 %18, i64 %21)
  %23 = load i64, i64* %5, align 8
  %24 = load i64, i64* @TIMER_CTRL_ENABLE, align 8
  %25 = or i64 %23, %24
  %26 = load i64, i64* @clkevt_base, align 8
  %27 = load i64, i64* @TIMER_CTRL, align 8
  %28 = add nsw i64 %26, %27
  %29 = call i32 @writel(i64 %25, i64 %28)
  ret i32 0
}

declare dso_local i64 @readl(i64) #1

declare dso_local i32 @writel(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
